fix: user better contrast colors

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -9,12 +9,12 @@
 
 html {
   --brand-color: var(--red-11);
-  --text-color-1: var(--gray-3);
-  --text-color-2: var(--gray-4);
-  --surface-color-1: var(--gray-8);
-  --surface-color-2: var(--gray-7);
-  --surface-color-3: var(--gray-6);
-  --surface-color-4: var(--gray-5);
+  --text-color-1: var(--yellow-3);
+  --text-color-2: var(--yellow-4);
+  --surface-color-1: var(--yellow-8);
+  --surface-color-2: var(--yellow-7);
+  --surface-color-3: var(--yellow-6);
+  --surface-color-4: var(--yellow-5);
 }
 
 html, body {
@@ -34,7 +34,7 @@ body {
   font-family: var(--font-sans);
   background-color: var(--surface-color-1);
 
-  background: radial-gradient(#e66465, #9198e5);
+  background: radial-gradient(var(--gray-7), var(--gray-12));
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -45,7 +45,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   margin: 0;
   text-align: center;
-  text-shadow: 2px 3px 0 var(--gray-10);
+  text-shadow: 2px 3px 0 var(--yellow-10);
 }
 
 @media screen and (width <= 768px) {
@@ -68,7 +68,7 @@ h1 {
   width: var(--size-15);
   height: var(--size-15);
 
-  background-color: var(--gray-3);
+  background-color: var(--yellow-3);
   color: var(--gray-12);
   border: none;
   cursor: pointer;
@@ -76,7 +76,7 @@ h1 {
 }
 
 .start-btn:hover {
-  background-color: var(--gray-4);
+  background-color: var(--yellow-4);
   transform: scale(1.1);
 }
 
